tests/format/junctions/invalid/target-self-override.bst
kind: stack

depends:
- subproject-self-override.bst:target.bst
